--- a/app/src/main/res/layout/details.xml
+++ b/app/src/main/res/layout/details.xml
@@ -48,9 +48,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="10dp"
             android:layout_alignParentEnd="true"
             android:background="@drawable/btnround_blue"
+            android:padding="10dp"
             android:text="₹ 50 Rs/h"
             android:textColor="@color/white"
             android:textSize="22sp"
@@ -293,7 +293,7 @@
             android:textStyle="bold"/>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/TwoHour"
+            android:id="@+id/timePickerCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
